--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <div class="addition-info">
+      <img class="addition-info__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix">
+      <a class="addition-info__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="wrapper">
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -23,7 +23,7 @@
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text">
+          <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg" alt="Remove image">
