--- a/index.html
+++ b/index.html
@@ -11,43 +11,43 @@
       <a class="addition-info__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="wrapper">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+      <p class="add-task-section">
+        <label class="add-task-title">Add Item</label>
+        <div class="add-task-form">
+          <input id="new-task" class="task add-task-form__input" type="text">
+          <button class="add-task-form__btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="title">Todo</h3>
+      <ul class="list" id="incompleteTasks">
+        <li class="item list__item">
+          <input class="item__input-checkbox" type="checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input class="task item__input-text" type="text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove image">
+            <img class="remove-img" src="./remove.svg" alt="Remove image">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
+        <li class="item list__item editMode">
+          <input class="item__input-checkbox" type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <input class="task item__input-text" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove image">
+            <img class="remove-img" src="./remove.svg" alt="Remove image">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="title">Completed</h3>
+      <ul class="list" id="completed-tasks">
+        <li class="item list__item">
+          <input class="item__input-checkbox" type="checkbox" checked>
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <input class="task item__input-text" type="text" >
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove image">
+            <img class="remove-img" src="./remove.svg" alt="Remove image">
           </button>
         </li>
       </ul>
