refactor: rename tags according to rule 1.1 in advanced html-and-css.md

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="addition-info">
+    <aside class="addition-info">
       <img class="addition-info__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix">
       <a class="addition-info__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+		</aside>
     <div class="wrapper">
-      <p class="add-task-section">
-        <label class="add-task-title">Add Item</label>
-        <div class="add-task-form">
-          <input id="new-task" class="task add-task-form__input" type="text">
-          <button class="add-task-form__btn">Add</button>
+      <section class="add-task-section">
+        <h3 class="add-task-title">Add Item</h3>
+        <div class="add-task-box">
+          <input id="new-task" class="task add-task-box__input" type="text">
+          <button class="add-task-box__btn">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="title">Todo</h3>
       <ul class="list" id="incompleteTasks">
         <li class="item list__item">
